<resources>
    <string name="app_name">RemoteVerify</string>
    <string name="test_case_run">Run</string>
    <string name="pair_test">Pairing Test</string>
    <string name="voice_test">Voice Test</string>
    <string name="key_test">Keys Test</string>
    <string name="reconnection_test">Reconnect Test</string>
    <string name="acl_connected">Device ACL connected</string>
    <string name="acl_disconnected">Device ACL disconnected</string>
    <string name="device_pairing">Device pairing</string>
    <string name="device_paired">Device paired</string>
    <string name="device_not_paired">Device not paired</string>
    <string name="device_disconnected">Device disconnected</string>
    <string name="device_connecting">Device connecting</string>
    <string name="device_connected">Device connected</string>
    <string name="ota">OTA</string>
    <string name="pair">PAIR</string>
    <string name="voice">VOICE</string>
    <string name="paired_device">Paired Devices</string>
    <string name="available_device">Available Devices</string>
    <string name="device_list">Device List</string>
    <string name="start_scan">Scan</string>
</resources>
