<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:baselineAligned="false"
    android:paddingTop="10dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_list"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                />
            <ProgressBar
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                style="?android:attr/progressDrawable"
                android:indeterminate="false"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffeeeeee"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/paired_device"
            />
        <ListView
            android:headerDividersEnabled="true"
            android:id="@+id/device_paired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available_device"
            android:background="#ffeeeeee"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            />
        <ListView
            android:headerDividersEnabled="true"
            android:id="@+id/device_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/case_pair"
                android:text="@string/pair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="onPairButtonClicked"
                />

            <Button
                android:id="@+id/case_voice"
                android:text="@string/voice"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="onVoiceButtonClicked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/case_ota"
                android:text="@string/ota"
                android:onClick="onOtaButtonClicked"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="79dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:background="#ffaaaaaa"
            android:layout_width="match_parent"
            android:layout_height="4dp"/>

        <TextView
            android:id="@+id/case_logger"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
</LinearLayout>
